Basic snake game complete

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "JustAnotherSnakeGame"
+name = "just_another_snake_game"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ratatui = { version = "0.21.0", features = ["all-widgets"] }
+console_engine = "2.6.0"
+rand = "0.8.5"
+ritelinked = "0.3.2"
